- [GUI] [WORKFLOW] Correctly print items' list when editing a Workflow
- [GUI] [FRONTEND] Correctly select a good ruleset for API collector but let user override the value
- [CONFIG] [SYSTEM] Correct issue preventing some certificates to be deleted from system
- [OPENID] [MODELS] Get correct URLs for OpenID IDPs
- [LDAP] Correctly get boolean values from LDAP replies


## [2.13.0] - 2023-11-29
### Added
- [FRONTEND] New last_update_time field
- [GUI] [WORKFLOW] CORS policy settings
- [HAPROXY] [CONF] CORS policy into config generation
- [API_PARSER] [HARFANGLAB] Fetch new endpoint for Threats logs
- [API_PARSER] [APEX] New parser
- [FRONTEND] [TCP] Add advanced option custom_tl_frame_delimiter for Rsyslog tcp frontends
### Removed
- [FRONTEND] [TIMEOUTS] Incoherent "timeout connect" in Frontend attributes
### Changed
- [HAPROXY] [CONF] Split Frontend and Workflow config to improve performance
- [HAPROXY] [CONF] Change test config names by uuids
- [PERFORMANCES] Avoid high overhead when loading Workflows by simplifying string representation
### Fixed
- [GUI] [FRONTEND] Bug allowing the creation of an http or tcp frontend without a listener
- [LOG_FORWARDER] Rsyslog config generation error when '-' found in LOGOM name
- [LOG_FORWARDER] Frontends configs aren't refreshed when LOGOM used as parse failure
- [WORKFLOW] Re-allow multiple workflows on the same FQDN with sub-paths
- [HAPROXY] Ensure X-Forwarded-proto header is correctly set on Frontend configuration
- [API_PARSER] [NOZOMI] Set correct timestamp format for query limits


## [2.12.1] - 2023-11-16
### Fixed
- [API] [BACKEND] Broken API URL
- [API] [WORKFLOW] Do not error on Workflow creation through API
- [SYSTEM] [USERS] Change password of an existing user


## [2.12.0] - 2023-11-15
### Added
- [API_PARSER] [VECTRA] New parser Vectra
- [MANAGE] [COMMANDS] New command get_api_key
- [OPENID] [CONNECTOR] New JWT validation parameters