@@ -6,7 +6,7 @@ if [ $? -ne 0 ] ; then
     exit 1
 fi
 
-/home/vlt-os/env/bin/python /home/vlt-os/vulture_os/manage.py loaddata applications filters services_settings default_template repositories
+/home/vlt-os/env/bin/python /home/vlt-os/vulture_os/manage.py loaddata applications filters services_settings default_template repositories tenants reputation_ctx
 if [ $? -ne 0 ] ; then
     /bin/echo "ERROR:: initial data: Please solve and relaunch bootstrap"
     exit 1
